OSX Lion native fullscreen mode prevent hiding mouse cursor
On VLC-1.2.0-git, when "Use the native fullscreen mode on OS X Lion" option is enabled, mouse cursor does not hide. But when the option is disabled, mouse cursor hide properly.
On VLC-1.2.0-git, when "Use the native fullscreen mode on OS X Lion" option is enabled, mouse cursor does not hide. But when the option is disabled, mouse cursor hide properly.
VideoLAN code repository instance