macosx: correctly hide the cursor when using Lion's native fullscreen mode. Fixes #5327